<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="TimeChannelDayParameters" Id="{949eff14-5f79-4ead-9ef7-98a87554a224}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK TimeChannelDayParameters
VAR_INPUT
	Timer1: TimeChannel1CH;
	Timer2: TimeChannel1CH;
	Timer3: TimeChannel1CH;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <LineIds Name="TimeChannelDayParameters">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>